--- a/gale.css
+++ b/gale.css
@@ -59,7 +59,7 @@ div#gale-content {
 .info-wrapper input[type=checkbox] {
     display: none;
 }
-.info-wrapper label {
+.info-wrapper .hide-info label {
     left: 50%;
     bottom: 0.5em;
     width: 9em;
@@ -85,6 +85,49 @@ div#gale-content {
     margin-top: -1.65em;
 }
 
+
+/* Thumbnails */
+.thumbnail img {
+	pointer-events: none;
+	transition: 1s;
+	position: relative;
+}
+.thumbnail input[type=checkbox]:not(:checked) ~ img, .thumbnail input[type=checkbox]:not(:checked) ~ .hover-text {
+	max-width: 15em;
+	max-height: 15em;
+}
+.thumbnail input[type=checkbox]:checked ~ img, .thumbnail input[type=checkbox]:checked ~ .hover-text {
+	max-width: 100%;
+	max-height: 100%;
+}
+.thumbnail input[type=checkbox] {
+    display: none;
+}
+.thumbnail label {
+	display: inline-block;
+	transition: 1s;
+	position: relative;
+}
+
+.thumbnail .hover-text {
+	background: rgba(0,0,0,0.5);
+	color: white;
+	cursor: pointer;
+	opacity: 0;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	transition: 1s;
+	
+	text-align: center;
+	vertical-align: text-bottom;
+}
+.thumbnail label:hover .hover-text {
+	opacity: 1;
+}
+
+
 /* ohter css classes */
 .installation-info {
 	border-style: solid;
@@ -94,6 +137,7 @@ div#gale-content {
 	margin: 10px;
 	padding: 10px;
 }
+
 .info .section {
 	margin-top: 10px;
 }
